--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       </main>
       <footer></footer>
     </div>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.js" type="module"></script>
   </body>
 </html>
